# sudoku

./: .prettierrc.js  README.md  eslint.config.js  flake.nix  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts  wrangler.jsonc
src/: App.vue  EditorView.vue  main.ts  style.css
src/components/: SudokuCell.vue  SudokuCellBackground.vue  SudokuCellClick.vue  SudokuGrid.vue  SudokuHighlighter.vue  SudokuMain.vue  SudokuPad.vue
src/components/SudokuPad/: Pad.ts  PadButton.vue
src/models/: events.ts  injection.ts  settings.ts  sudoku.ts  sudokuSelectionEventHandler.ts  sudokuSolver.ts  utils.ts
src/plugins/: Vuetify.ts  router.ts
sudoku-solver/: Cargo.toml  LICENSE
sudoku-solver/benches/: solver_benchmark.rs
sudoku-solver/src/: lib.rs  solver.rs  sudoku.rs  utils.rs
sudoku-solver/src/solver/chain/: forced_chain.rs  mod.rs
sudoku-solver/src/solver/fish/: fish_utils.rs  franken_fish.rs  mod.rs  mutant_fish.rs  simple_fish.rs
sudoku-solver/src/solver/guess/: dancing_links.rs  mod.rs
sudoku-solver/src/solver/intersection/: mod.rs
sudoku-solver/src/solver/single/: mod.rs
sudoku-solver/src/solver/single_digit_patterns/: mod.rs  rectangle_elimination.rs  skyscraper.rs  two_string_kite.rs
sudoku-solver/src/solver/subset/: mod.rs
sudoku-solver/src/solver/wing/: mod.rs  wwing.rs  xywing.rs
sudoku-solver/src/sudoku/: mod.rs  solver.rs  utils.rs
sudoku-solver/src/utils/: cellset.rs  combination_generator.rs  combination_generator2.rs  mod.rs  valueset.rs
sudoku-solver/tests/: regression_test.rs
sudoku-solver/tests/regression_tests/simple/: 1.toml  2.toml  3.toml
