[package]
name = "sudoku-solver"
version = "0.1.0"
authors = ["Undefined01 <amoscr@163.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { vsersion = "0.4.5", optional = true }
itertools = "0.13.0"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
criterion = { version = "0.5.1", features = ["html_reports"]  }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
debug = true

[[bench]]
name = "solver_benchmark"
harness = false