[package]
name = "hudoku"
version = "0.0.1"
authors = ["Undefined01 <amoscr@163.com>"]
edition = "2021"
description = "A human style sudoku solver"
license = "MIT"

exclude = ["/tests", "/benches"]

[lib]
name = "sudoku_solver"
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]
wee_alloc = ["dep:wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wee_alloc = { version = "0.4.5", optional = true }
itertools = "0.13.0"
arrayvec = "0.7.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.34"
criterion = { version = "0.5.1", features = ["html_reports"]  }
serde = "1.0.206"
toml = "0.8.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[[bench]]
name = "solver_benchmark"
harness = false
